--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ yarn-error.log*
 # Cucumber
 cucumber-report.json
 cucumber-report.xml
-/reports/
+reports/*
 !reports/generate-report.js
  
 # Logs
