Se agrega multibrowser con chromium, firebox y webkit y ejecución de escenarios en paralelo

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node scripts/run-with-report.js",
-    "report": "node reports/generate-report.js"
+    "test": "node scripts/run-with-report.js"
   },
   "keywords": [],
   "author": "",
